# demo-templates

./: README.md
discord/c/: .botway.yaml  .gitignore  Dockerfile  run.ps1
discord/cpp/: .botway.yaml  CMakeLists.txt  Dockerfile
discord/crystal/: .botway.yaml  .gitignore  Dockerfile  shard.yml
discord/csharp/: .botway.yaml  .gitignore  Dockerfile  csharp.csproj
discord/dart/: .botway.yaml  .gitignore  Dockerfile  pubspec.yaml
discord/deno/: .botway.yaml  Dockerfile
discord/go/: .botway.yaml  Dockerfile  go.mod  go.sum
discord/java/: .botway.yaml  Dockerfile
discord/kotlin/: .botway.yaml  .gitignore
discord/nim/: .botway.yaml  .gitignore  Dockerfile  nim.nimble
discord/nodejs/: .botway.yaml  package.json
discord/php/: .botway.yaml  .gitignore  Dockerfile  composer.json
discord/python/: .botway.yaml  Dockerfile
discord/ruby/: .botway.yaml  .gitignore  Dockerfile  Gemfile
discord/rust/: .botway.yaml  .gitignore  Cargo.toml  Dockerfile
discord/typescript/: .botway.yaml  Dockerfile  package.json
slack/nodejs/: .botway.yaml  Dockerfile  package.json
slack/python/: .botway.yaml  Dockerfile  requirements.txt
slack/typescript/: .botway.yaml  package.json
telegram/: .botway.yaml
telegram/cpp/: .botway.yaml  .gitignore  CMakeLists.txt  Dockerfile
telegram/csharp/: .botway.yaml  Dockerfile  csharp.csproj
telegram/dart/: .botway.yaml  Dockerfile  pubspec.yaml
telegram/deno/: .botway.yaml  Dockerfile  import_map.json
telegram/go/: .botway.yaml  Dockerfile  (+2 more)
telegram/rust/: .botway.yaml  Cargo.toml  Dockerfile
telegram/rust/src/: main.rs
(+88 files in other folders)
