[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.0", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
botway-rs = "0.2.2"

[[bin]]
name = "bot"
path = "src/main.rs"
